--- a/public/frontend.css
+++ b/public/frontend.css
@@ -45,7 +45,7 @@ ul.layout-v { list-style: none; margin: 0px; padding: 0px }
 ul.layout-v li { margin: 0px; float: none }
 
 .cms-message { border: 2px solid silver; }
-.cms-message h2 { }
+.cms-message h2 { font-size: 14px }
 .cms-message .text { }
 
 .form-errors { }
@@ -66,7 +66,8 @@ ul.layout-v li { margin: 0px; float: none }
 #page-container { width: 960px; min-height: 1080px; margin-left: auto; margin-right: auto; box-shadow: 0px 0px 5px 2px #EEE }
 #page { }
 
-#header { height: 100px; line-height: 100px; padding-left: 40px; background-color: #EEE }
+#header { height: 100px; padding-left: 40px; background-color: #EEE }
+#header h2 { margin: 0px; line-height: 100px; }
 
 #mid-container { padding: 20px 40px 0px 40px; }
 #content { width: 66%; float: left }
