--- a/public/backend.css
+++ b/public/backend.css
@@ -56,6 +56,7 @@ h1.page-title { }
 .form-group label:after { /* content: ':'; */ }
 .form-group input { width: 40%; padding: 5px 10px; color: #4082E3 }
 .form-group input[type=text]:focus, .form-group input[type=password]:focus { border-color: #ff6100; }
+.form-group textarea { vertical-align: bottom; }
 .form-actions { }
 .form-actions input[type=submit] { padding: 10px 20px; border: 1px solid silver; color: #666; }
 .form-actions input[type=submit]:focus { border-color: #ff6100; }
@@ -89,6 +90,8 @@ body { background-image: url(theme/backend/background.png); background-color: wh
 #profile-link { position: absolute; display: block; background-image: url(theme/empty.png); left: 6px; top: 112px; width: 45px; height: 60px; z-index: 3 }
 #info-box { position: absolute; display: block; left: 72px; top: 120px; width: 180px; height: 50px; overflow: hidden; color: white; text-shadow: #404040 0px 1px 1px }
 #info-box span { display: block; margin-bottom: 10px }
+#info-box img { vertical-align: middle; }
+#info-box a { color: inherit }
 #info-bar { position: absolute; display: block; left: 670px; top: 95px; width: 230px; color: white; font-size: 11px; text-align: center }
 #tecslink { position: absolute; background-image:url(theme/empty.png); left: 931px; top: 92px; width: 15px; height: 20px }
 
