--- a/public/base.css
+++ b/public/base.css
@@ -23,3 +23,6 @@ ul.layout-h li { display: list-item; float: left; margin: 0px; }
 
 ul.layout-v { list-style: none; margin: 0px; padding: 0px }
 ul.layout-v li { margin: 0px; float: none }
+
+ul.pagination { list-style: none; margin: 0px; padding: 0px }
+ul.pagination li { display: list-item; float: left; margin: 0px; padding: 2px 5px }
