--- a/public/backend.css
+++ b/public/backend.css
@@ -12,6 +12,7 @@ body { font-family: Tahoma, Arial; font-size: 13px; color: #666; background-colo
 a, a:visited { color: #666666; text-decoration: none; font-weight: normal; }
 a:hover, a:active { color: #0066CC; text-decoration: none; font-weight: normal; }
 
+/* Headings */
 h1 { color: #ff6100; }
 h2 { }
 h3 { }
@@ -44,7 +45,8 @@ select { margin: 0px; padding: 0px 10px; border: 1px solid silver; border-radius
 
 h1.page-title { }
 
-.cms-message { border: 2px solid silver; }
+/* Messages */
+.cms-message { margin-bottom: 10px; padding: 5px; border: 1px solid #E7E7E7; background-image: url(theme/backend/bg_message.png); background-repeat: repeat-x; }
 .cms-message h2 { font-size: 14px }
 .cms-message .text { }
 
@@ -71,19 +73,26 @@ h1.page-title { }
 .form-helpers.top { min-height: 26px; padding-bottom: 10px; }
 .form-helpers.bottom { margin: 10px 0px; padding: 5px 0px; border-top: 1px dotted #CCC; border-bottom: 1px dotted #CCC; }
 
+/* Search-Box */
 .search-box input[type=text] { width: 170px; padding: 1px 10px; background-image: url(theme/backend/bg_searchbox.png); background-repeat: no-repeat; text-indent:20px }
 .form-helpers .search-box { float: right; }
 
+/* Order-Switcher */
 .order-switcher { display: inline-block; margin: 10px 0px; padding: 3px 7px; border-radius: 3px; background-color: #333; color: white !important }
 .order-switcher img { vertical-align: middle; }
 .form-helpers .order-switcher { margin: 0px }
 
+/* Pagination */
 ul.pagination li { position: relative; width: 8px; height: 16px; margin: 0px 2px; padding: 2px 6px; border: 1px solid #C6C6C6; border-radius: 5px; background-color: #EFEFEF; font-weight: bold }
 ul.pagination li a { position: absolute; left: 0px; top: 0px; width: 100%; height: 100%; line-height: 20px; text-align: center; font-weight: bold }
 ul.pagination li a:hover { background-color: #C6C6C6; color: #FF6100 }
 ul.pagination li.active { border: 1px solid #936E41; background-color: #FF6100; color: white }
 ul.pagination li.disabled { display: none }
 .form-helpers ul.pagination { float: right; }
+
+/* Tooltip */
+#tooltip { display: none; position: absolute; background: #232323; padding: 5px; opacity: 1.0; border-radius: 3px; font-size: 13px; color: white }
+#tooltip img { max-width: 600px; max-height: 450px }
 
 /*
  * Mainlayout
