--- a/public/backend.css
+++ b/public/backend.css
@@ -6,7 +6,7 @@
  * Elements
  */
 
-body { font-family: Tahoma, Arial; font-size: 13px; color: #666; background-color: #E4E4E4; background-image:url('theme/backend/headerbg_h.png'); background-repeat:repeat-x; }
+body { font-family: Tahoma, Arial; font-size: 13px; color: #666; background-color: #E4E4E4; background-image:url(theme/backend/headerbg_h.png); background-repeat:repeat-x; }
 
 /* URLs */
 a, a:visited { color: #666666; text-decoration: none; font-weight: normal; }
@@ -19,7 +19,7 @@ h3 { }
 h4 { }
 h5 { }
 
-p { }
+p { line-height: 1.5 }
 
 /* Table Elements */
 table { font-family: Tahoma, Arial; font-size: 13px; color: #666 }
@@ -30,14 +30,15 @@ tr { }
 /* Form Elements */
 form {  }
 fieldset { border: none; }
-textarea { background-image: url('theme/bg_textbox.png'); background-repeat: repeat-x; border: 1px solid silver; border-radius: 5px; padding: 5px 10px 5px 10px }
-input { border: 1px solid silver; border-radius: 5px; background-image:url('theme/bg_textbox.png'); font-family: Tahoma, Arial; font-size: 13px; color: #666666; }
+textarea { padding: 5px 10px; border: 1px solid silver; border-radius: 5px; background-image: url(theme/bg_textbox.png); background-repeat: repeat-x; font-family: Tahoma, Arial; color: #666666 }
+input { border: 1px solid silver; border-radius: 5px; background-image:url(theme/bg_textbox.png); font-family: Tahoma, Arial; font-size: 13px; color: #666666; }
+input[type=checkbox] { width: auto !important; padding: 0px !important; cursor: pointer }
 input[type=text] { width: 300px; height: 22px !important; padding: 0px 10px }
-input[type=submit],input[type=reset] { height: 26px; background-image: url('theme/bg_button.png'); color: #666666; } /* height = input["text"].height + 4px */
+input[type=submit],input[type=reset] { height: 26px; background-image: url(theme/bg_button.png); color: #666666; } /* height = input["text"].height + 4px */
 input[type=file] { height: 26px; } /* height = input["text"].height + 4px */
-button, input[type=button] { border: 1px solid silver; border-radius: 5px; height: 26px; background-image: url('theme/bg_button.png'); color: #666666; } /* height = input["text"].height + 4px */
+button, input[type=button] { border: 1px solid silver; border-radius: 5px; height: 26px; background-image: url(theme/bg_button.png); color: #666666; } /* height = input["text"].height + 4px */
 button img { vertical-align: bottom; }
-select { margin: 0px; padding: 0px 10px; border: 1px solid silver; border-radius: 5px; background-image: url('theme/bg_textbox.png'); height: 26px; }
+select { margin: 0px; padding: 0px 10px; border: 1px solid silver; border-radius: 5px; background-image: url(theme/bg_textbox.png); height: 26px; }
 
 /*
  * Classes
@@ -60,12 +61,14 @@ h1.page-title { }
 .form-group.space-top {  }
 .form-group label { display: inline-block; min-width: 15%; padding-right: 20px; cursor: pointer; }
 .form-group label:after { /* content: ':'; */ }
-.form-group input { width: 40%; padding: 5px 10px; color: #4082E3 }
-.form-group input[type=text]:focus, .form-group input[type=password]:focus { border-color: #ff6100; }
+.form-group input { width: 40%; padding: 5px 10px; }
+.form-group input[type=text]:focus, .form-group input[type=password]:focus { border-color: #ff6100; color: #4082E3 }
 .form-group textarea { vertical-align: bottom; }
-.form-actions { }
-.form-actions input[type=submit] { padding: 10px 20px; border: 1px solid silver; color: #666; }
-.form-actions input[type=submit]:focus { border-color: #ff6100; }
+.form-group textarea:focus { border-color: #ff6100; color: #4082E3 }
+.form-actions { padding-top: 20px }
+.form-actions input[type=submit], .form-actions button { margin-right: 10px; padding: 0px 10px; border: 1px solid silver; color: #666; }
+.form-actions input[type=submit]:focus, .form-actions button:focus { border-color: #ff6100; }
+.form-actions button img { vertical-align: bottom; }
 
 /* Content Table */
 .content-table { width: 100%; border: 1px solid #EFEFEF; border-collapse: collapse; }
@@ -74,7 +77,7 @@ h1.page-title { }
 .content-table td { padding: 5px; border: 1px solid #EFEFEF; background-image: url(theme/backend/bg_tablecell.png); background-repeat: repeat-x; background-position: left bottom; }
 .content-table tr:hover { color:#333333 }
 
-.form-helpers.top { min-height: 26px; padding-bottom: 10px; }
+.form-helpers.top { min-height: 26px; margin-bottom: 20px; }
 .form-helpers.bottom { margin: 10px 0px; padding: 5px 0px; border-top: 1px dotted #CCC; border-bottom: 1px dotted #CCC; }
 
 /* Search-Box */
@@ -105,11 +108,11 @@ ul.pagination li.disabled { display: none }
 body { background-image: url(theme/backend/background.png); background-color: white }
 
 #page-container { width: 986px; margin-left: auto; margin-right: auto }
-#header { position: relative; width: 100%; height: 219px; background-image:url(theme/backend/header.png) }
+#header { position: relative; width: 100%; height: 219px; background-image: url(theme/backend/header.png) }
 #header-logo { position: absolute; background-image:url(theme/empty.png); width: 270px; height: 92px }
 
 /* Header Nav */
-.hnav { position: absolute; background-image:url(theme/backend/headernav.png); top: 0px; height: 63px }
+.hnav { position: absolute; background-image: url(theme/backend/headernav.png); top: 0px; height: 63px }
 #hnav1 { background-position: 0px 0px; left: 559px; width: 62px }
 #hnav1:hover { background-position: 0 -63px }
 #hnav2 { background-position: -62px 0px; left: 621px; width: 85px }
@@ -120,7 +123,7 @@ body { background-image: url(theme/backend/background.png); background-color: wh
 #hnav4:hover { background-position: -208px -63px }
 #hnav5 { background-position: -265px 0px; left: 824px; width: 79px }
 #hnav5:hover { background-position: -265px -63px }
-.quicklink { position: absolute; background-image:url(theme/empty.png); top: 160px; width: 13px; height: 19px }
+.quicklink { position: absolute; background-image: url(theme/empty.png); top: 160px; width: 13px; height: 19px }
 
 #user-img { position: absolute; display: block; left: 6px; top: 112px; width: 45px; height: 60px }
 #user-img-overlay { position: absolute; display: block; left: 6px; top: 112px; z-index: 2 }
@@ -130,9 +133,9 @@ body { background-image: url(theme/backend/background.png); background-color: wh
 #info-box img { vertical-align: middle; }
 #info-box a { color: inherit }
 #info-bar { position: absolute; display: block; left: 670px; top: 95px; width: 230px; color: white; font-size: 11px; text-align: center }
-#tecslink { position: absolute; background-image:url(theme/empty.png); left: 931px; top: 92px; width: 15px; height: 20px }
+#tecslink { position: absolute; background-image: url(theme/empty.png); left: 931px; top: 92px; width: 15px; height: 20px }
 
-#content-wrapper { width: 100%; min-height: 785px; padding-bottom: 100px; background-image:url(theme/backend/contentbg.png); }
+#content-wrapper { width: 100%; min-height: 785px; padding-bottom: 100px; background-image: url(theme/backend/contentbg.png); }
 #sidebar { float: left; width: 237px; padding: 0px 15px 0px 20px }
 
 /* Sidebar Nav */
