Added front search feature: A prototype implementation of the global search

--- a/public/backend.css
+++ b/public/backend.css
@@ -139,11 +139,11 @@ body { background-image: url(theme/backend/background.png); background-color: wh
 #sidebar { float: left; width: 237px; padding: 0px 15px 0px 20px }
 
 /* Sidebar Nav */
-.menuhead { display: block; height: 51px; color: #FFFFFF; cursor: pointer; }
-.menuhead.daily { background-image: url(theme/backend/nav_header_daily.png) }
-.menuhead.perma { background-image: url(theme/backend/nav_header_perma.png) }
-.menuhead.esports { background-image: url(theme/backend/nav_header_esport.png) }
-.menuhead.website { background-image: url(theme/backend/nav_header_website.png) }
+.menu-head { display: block; height: 51px; color: #FFFFFF; cursor: pointer; }
+.menu-head.daily { background-image: url(theme/backend/nav_header_daily.png) }
+.menu-head.perma { background-image: url(theme/backend/nav_header_perma.png) }
+.menu-head.esports { background-image: url(theme/backend/nav_header_esport.png) }
+.menu-head.website { background-image: url(theme/backend/nav_header_website.png) }
 .selected {  }
 .submenu a, .submenu a:visited { position: absolute; left: 0px; top: 0px; width: 233px; height: 100%; color: #CCCCCC; z-index: 2 }
 .submenu a:hover, submenu a:active { color: #ff6100 }
@@ -154,7 +154,7 @@ body { background-image: url(theme/backend/background.png); background-color: wh
 .menu2 img { top: 13px }
 .menu3 { position: relative; background-image: url(theme/backend/nav_item_bot.png); text-indent: 60px; height: 49px; line-height: 42px;  }  
 .menu3 img { top: 13px }
-.menubottom { background-image: url(theme/backend/menu_bottom.png); height: 17px }
+.menu-bottom { background-image: url(theme/backend/menu_bottom.png); height: 17px }
 .applemenu { /*dont remove this class*/ }
 .applemenu div.submenu { /*DIV that contains each sub menu*/ /*dont remove this class*/ }
 
