--- a/public/backend.css
+++ b/public/backend.css
@@ -111,6 +111,10 @@ ul.pagination li.disabled { display: none }
 body { font-family: 'Open Sans', Arial; font-size: 13px; color: #666; background-color: white; background-image: url(theme/backend/background.png); background-repeat: repeat-x; }
 
 #page-container { width: 986px; margin-left: auto; margin-right: auto }
+
+#nojavascript { padding: 10px; color: #ff6100; background-color: black; border: 2px #ff6100 solid }
+#nojavascript img { vertical-align: text-top; margin-right: 10px }
+
 #header { position: relative; width: 100%; height: 219px; background-image: url(theme/backend/header.png) }
 #header-logo { position: absolute; background-image:url(theme/empty.png); width: 270px; height: 92px }
 
