--- a/public/backend.css
+++ b/public/backend.css
@@ -86,10 +86,10 @@ h1.page-title { }
 .search-box input[type=text] { width: 170px; padding: 1px 10px; background-image: url(theme/backend/bg_searchbox.png); background-repeat: no-repeat; text-indent:20px }
 .form-helpers .search-box { float: right; }
 
-/* Order-Switcher */
-.order-switcher { display: inline-block; margin: 10px 0px; padding: 3px 7px; border-radius: 3px; background-color: #333; color: white !important }
-.order-switcher img { vertical-align: middle; }
-.form-helpers .order-switcher { margin: 0px }
+/* Sort-Switcher */
+.sort-switcher { display: inline-block; margin: 10px 0px; padding: 3px 7px; border-radius: 3px; background-color: #333; color: white !important }
+.sort-switcher img { vertical-align: middle; }
+.form-helpers .sort-switcher { margin: 0px }
 
 /* Pagination */
 ul.pagination li { position: relative; width: 8px; height: 16px; margin: 0px 2px; padding: 2px 6px; border: 1px solid #C6C6C6; border-radius: 5px; background-color: #EFEFEF; font-weight: bold }
