--- a/public/backend.css
+++ b/public/backend.css
@@ -23,10 +23,10 @@ h5 { }
 p { line-height: 1.5 }
 
 /* Table Elements */
-table { font-family: Tahoma, Arial; font-size: 13px; color: #666 }
+table { font-family: font-family: 'Open Sans', Tahoma; font-size: 13px; color: #666; border-collapse: collapse; }
 tr { }
 th { }
-tr { }
+td { vertical-align: top }
 
 /* Form Elements */
 form {  }
@@ -72,7 +72,7 @@ h1.page-title { }
 .form-actions input[type=submit], .form-actions button { margin-right: 10px; }
 
 /* Content Table */
-.content-table { width: 100%; border: 1px solid #EFEFEF; border-collapse: collapse; }
+.content-table { width: 100%; border: 1px solid #EFEFEF; }
 .content-table th { height: 30px; padding-left: 5px; line-height:30px; background-image: url(theme/backend/bg_tablehead.png); background-repeat: repeat-x; font-weight:bold; text-align: left }
 .content-table th a, .content-table th a:visited { color: gray; font-weight: bold } 
 .content-table td { padding: 5px; border: 1px solid #EFEFEF; background-image: url(theme/backend/bg_tablecell.png); background-repeat: repeat-x; background-position: left bottom; }
@@ -102,6 +102,12 @@ ul.pagination li.disabled { display: none }
 /* Tooltip */
 #tooltip { display: none; position: absolute; background: #232323; padding: 5px; opacity: 1.0; border-radius: 3px; font-size: 13px; color: white }
 #tooltip img { max-width: 600px; max-height: 450px }
+
+/*
+ * Subpages
+ */
+
+.page-images .content-table .image { max-width: 500px; max-height: 100px }
 
 /*
  * Mainlayout
