Important update. FormBuilder class replaced by macros. Started to use Ardent relationship to handle related entities in CRUD management.

--- a/public/libs/formstone/selecter.css
+++ b/public/libs/formstone/selecter.css
@@ -4,7 +4,7 @@
 	.selecter .selecter-options { box-sizing: border-box; border: 1px solid #ccc; border-width: 0 1px 1px; background-color: #fefefe; border-radius: 0 0 3px 3px; box-shadow: 0 1px 4px rgba(0, 0, 0, 0.15); display: none; left: 0; margin: 0; max-height: 260px; overflow: auto; overflow-x: hidden; padding: 0; position: absolute; top: 100%; width: auto; *width: auto; min-width: 100%; z-index: 50; }
 	.selecter .selecter-group { background: #F9F9F9; border-bottom: 1px solid #e3e3e3; color: #999; display: block; font-size: 11px; padding: 5px 10px 4px; text-transform: uppercase; }
 	.selecter .selecter-item { height: 32px; /* 22px + 10px padding */ background: #fff; border-bottom: 1px solid #e3e3e3; color: #333; cursor: pointer; display: block; font-size: 13px; margin: 0; overflow: hidden; padding: 5px 10px; text-overflow: ellipsis; width: 100%; box-sizing: border-box; }
-	.selecter .selecter-item.selected { background: #F9F9F9; }
+	.selecter .selecter-item.selected { background: #dadada; }
 	.selecter .selecter-item.disabled { color: #999; cursor: default; }
 	.selecter .selecter-item:first-child { border-radius: 0; }
 	.selecter .selecter-item:last-child { border-radius: 0 0 2px 2px; border-bottom: 0; }
@@ -43,6 +43,7 @@
 	.selecter.bottom.cover.open .selecter-options { border-radius: 3px; }
 
 	/* Multiple Select */
+	.selecter.multiple { vertical-align: top }
 	.selecter.multiple .selecter-options { border-radius: 3px; border-width: 1px; box-shadow: none; display: block; position: static; width: 100%; }
 
 	/* 'Disabled' State */
